--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "supertest": "^7.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.19.2",
     "jest-sorted": "^1.0.15",
